Sprint 2 - User and Project Management completed